--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines":{
-    "node" : "6.11.2"
+  "engines": {
+    "node": "6.11.2"
   },
   "author": " ",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
